Bugfixes and new return value (#21)
* reading of csv column had a bug where it didn't advance the column count and therefore only ever returned the first column
* the ElasticsearchAdapter.execute method now returns a Stream as well
* fixed a bug where said execute only ever returned the first 10 matches (default value for ElasticSearch) -> implemented SearchAfter here as well